@@ -1,0 +1,18 @@
+/**
+ * @file traits.h
+ * @author Simon Pfreundschuh
+ * @date 2017-06-07
+ * @brief Invlib super class used to distinguish invlib code from  external code.
+ */
+
+#ifndef INVLIB_H
+#define INVLIB_H
+
+namespace invlib
+{
+    
+class Invlib {};
+
+}     // namespace::invlib
+
+#endif // TRAITS_H
